fixed picture alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,3 +100,9 @@ body{
     align-content:center;
     text-align: center;
 }
+
+.center{
+    align-items:center;
+    align-content:center;
+    text-align: center;
+}
